<resources>
	<string name="app_name" translatable="false">TT9 Smart</string>
	<string name="app_name_short" translatable="false">TT9S</string>
	<string name="dictionary_url" translatable="false">https://raw.githubusercontent.com/bargach-omar/tt9-smart/%1$s/downloads/%2$s</string>
	<string name="emoji_map_url" translatable="false">https://raw.githubusercontent.com/bargach-omar/tt9-smart/master/emoji/emoji_map_%1$s.csv</string>
	<string name="system_night_mode" translatable="false">n</string>
	<string name="app_settings">TT9 Settings</string>
	<string name="click_here_for_preview">Click here for preview</string>
	<string name="completed">Completed</string>
	<string name="delete">Delete</string>
	<string name="english_only" translatable="false">English only</string>
	<string name="language">Language</string>
	<string name="list_item_none" translatable="false">--</string>
	<string name="loading">Loading…</string>
	<string name="search_results">Search Results</string>
	<string name="search_results_void">No results.</string>
	<string name="error_unexpected">Unexpected error occurred.</string>
	<string name="add_word_add">Add</string>
	<string name="add_word_confirm">Add word \"%1$s\" to %2$s?</string>
	<string name="add_word_no_confirmation">Add Without Confirmation</string>
	<string name="add_word_no_selection">Move the cursor inside a word to add it.</string>
	<string name="add_word_not_available_in_language">Adding words is not possible in this language.</string>
	<string name="add_word_blank">Blank word not added.</string>
	<string name="add_word_exist">Word \"%1$s\" is already in the dictionary.</string>
	<string name="add_word_invalid_language" translatable="false">Cannot add a word when no language is selected.</string>
	<string name="add_word_success">\"%1$s\" added.</string>
	<string name="add_word_title">Add Word</string>
	<string name="edit_word_invalid_characters">Can not edit \"%1$s\" when language is \"%2$s\".</string>
	<string name="edit_word_not_available_in_language">Editing words is not possible in this language.</string>
	<string name="edit_word_no_selection">Move the cursor inside a word to edit it.</string>
	<string name="commands_clipboard_is_empty">Clipboard is empty.</string>
	<string name="commands_select_command">Select a Command</string>
	<string name="pref_category_about">About</string>
	<string name="pref_category_abc_mode">ABC Mode</string>
	<string name="pref_category_appearance">Appearance</string>
	<string name="pref_category_colors">Colors</string>
	<string name="pref_category_custom_words">Added Words</string>
	<string name="pref_category_geometry">Geometry</string>
	<string name="pref_category_debug_options" translatable="false">Debug Options</string>
	<string name="pref_category_delete_words">Delete Added Words</string>
	<string name="pref_category_function_keys">Select Hotkeys</string>
	<string name="pref_category_fn_key_order">Function Key Order</string>
	<string name="pref_category_hacks">Compatibility</string>
	<string name="pref_category_key_appearance">Keys</string>
	<string name="pref_category_keypad">Keypad</string>
	<string name="pref_category_keypad_hardware">Physical Keys</string>
	<string name="pref_category_keypad_onscreen">On-Screen Keys</string>
	<string name="pref_category_layout">On-screen Layout</string>
	<string name="pref_category_predictive_mode">Predictive Mode</string>
	<string name="pref_category_punctuation_order">Punctuation Order</string>
	<string name="pref_category_setup">Initial Setup</string>
	<string name="pref_category_typing">Typing</string>
	<string name="pref_category_usage_stats" translatable="false">Usage Stats</string>
	<string name="pref_abc_auto_accept">Automatic Letter Selection</string>
	<string name="pref_abc_auto_accept_off">Off</string>
	<string name="pref_abc_auto_accept_fastest">Very Quick</string>
	<string name="pref_abc_auto_accept_fast">Quick</string>
	<string name="pref_abc_auto_accept_normal">Moderate</string>
	<string name="pref_abc_auto_accept_slow">Slow</string>
	<string name="pref_allow_composing_text">Show Composing Text</string>
	<string name="pref_allow_composing_text_summary">Show words in text fields while typing. When disabled, words are shown only after pressing OK or Space.</string>
	<string name="pref_alternative_suggestion_scrolling">Alternative Suggestion Scrolling Method</string>
	<string name="pref_alternative_suggestion_scrolling_summary">Enable if sometimes you can not see all suggestions or have trouble scrolling them.</string>
	<string name="pref_arrows_left_right">Left/Right Arrows</string>
	<string name="pref_arrows_left_right_summary">Show left/right arrow keys for scrolling the suggestions or moving the text cursor horizontally.</string>
	<string name="pref_arrows_up_down">Up/Down Arrows</string>
	<string name="pref_arrows_up_down_summary">Allow swiping the OK key up/down to filter suggestions or move the text cursor vertically.</string>
	<string name="pref_auto_capitals_after_newline">Automatically Capitalize Every Line</string>
	<string name="pref_auto_capitals_after_newline_summary">Start every line with a capital letter, even if it is in the middle of a sentence.</string>
	<string name="pref_auto_mind_reading">Mind Reading</string>
	<string name="pref_auto_mind_reading_summary">Show next-word suggestions before you start typing or after the first letter. Starts empty and learns as you type.</string>
	<string name="pref_auto_space">Automatic Space</string>
	<string name="pref_auto_space_summary">Automatically add a space after punctuation or words.</string>
	<string name="pref_auto_text_case">Automatic Capitalization</string>
	<string name="pref_auto_text_case_summary">Automatically start sentences with a capital letter. (Not possible in all languages)</string>
	<string name="pref_auto_trim_trailing_space">Automatically Trim Trailing Whitespace</string>
	<string name="pref_auto_trim_trailing_space_summary">Automatically remove extra spaces when moving the cursor back.</string>
	<string name="pref_backspace_acceleration">Fast Delete</string>
	<string name="pref_backspace_acceleration_summary">Erase entire words by holding or swiping Backspace. (Not supported in some apps)</string>
	<string name="pref_backspace_recomposing">Word Re-Composition</string>
	<string name="pref_backspace_recomposing_summary">Press Backspace at word end to edit the word. (Not possible in some apps and with mixed-language text)</string>
	<string name="pref_choose_languages">Languages</string>
	<string name="pref_bottom_padding_portrait">Space Below (Portrait)</string>
	<string name="pref_drag_resize">Drag to Resize</string>
	<string name="pref_drag_resize_summary">Drag the Status Bar or the Settings key to minimize the keyboard or adjust its position on the screen.</string>
	<string name="pref_double_tap_resize">Double-Tap to Resize</string>
	<string name="pref_double_tap_resize_summary">Double-tap the Status Bar to maximize or minimize the keyboard when no suggestions are shown.</string>
	<string name="pref_double_zero_char">Character for Double 0-key Press</string>
	<string name="pref_numpad_fn_key_width">Letter Keys Width</string>
	<string name="pref_font_size">Settings Font Size</string>
	<string name="pref_font_size_default">Default</string>
	<string name="pref_font_size_large">Large</string>
	<string name="pref_hack_always_on_top">Always on Top</string>
	<string name="pref_hack_always_on_top_summary">Prevent other apps from covering %1$s or pushing it off the screen.</string>
	<string name="pref_hack_auto_disable_composing">Automatically Disable Composing Text</string>
	<string name="pref_hack_auto_disable_composing_summary">Automatically disable composing text when an app causes typing issues.</string>
	<string name="pref_hack_key_pad_debounce_time">Accidental Key Repeat Protection</string>
	<string name="pref_hack_key_pad_debounce_off">Off</string>
	<string name="pref_haptic_feedback">Vibration</string>
	<string name="pref_haptic_feedback_summary">Vibrate when a virtual key is pressed. (Not possible on all devices)</string>
	<string name="pref_haptic_feedback_problematic_summary">Vibration may cause crashes on your device. Enable at your own risk.</string>
	<string name="pref_hardware_key_visual_feedback">Visualize Key Presses</string>
	<string name="pref_hardware_key_visual_feedback_summary">Pressing a physical key will make the corresponding on-screen key show a click effect.</string>
	<string name="pref_help">Help</string>
	<string name="pref_hold_to_type">Number Key Holding</string>
	<string name="pref_hold_to_type_summary">Allow typing numbers or running app functions by holding number keys. Turn off if the device misdetects short presses as holds.</string>
	<string name="pref_key_shadows">Shadows Below Keys</string>
	<string name="pref_keyboard_preview">Preview</string>
	<string name="pref_layout">Layout Type</string>
	<string name="pref_layout_classic">Virtual numpad (retro)</string>
	<string name="pref_layout_numpad">Virtual numpad (modern)</string>
	<string name="pref_layout_small">Function keys</string>
	<string name="pref_layout_stealth">Invisible</string>
	<string name="pref_layout_tray">Suggestion list only</string>
	<string name="pref_layout_smartbar">SmartBar (predictions + letters)</string>
	<string name="pref_numpad_alignment">Alignment</string>
	<string name="pref_numpad_key_font_size">Key Font Size</string>
	<string name="pref_numpad_key_height">Height</string>
	<string name="pref_numpad_shape">Shape</string>
	<string name="pref_numpad_shape_square">Square</string>
	<string name="pref_numpad_shape_v">V-Shape</string>
	<string name="pref_numpad_shape_long_space">Long Spacebar</string>
	<string name="pref_numpad_width">Width</string>
	<string name="pref_one_key_emoji">Emojis on 1-key</string>
	<string name="pref_one_key_emoji_none">No emojis</string>
	<string name="pref_one_key_emoji_simple">Brief list</string>
	<string name="pref_predict_word_pairs">Learn Word Pairs</string>
	<string name="pref_predict_word_pairs_summary">Remember commonly used phrases to improve the suggestions accuracy.</string>
	<string name="pref_predictive_auto_accept">Automatic Word Selection</string>
	<string name="pref_privacy_policy">Privacy Policy</string>
	<string name="pref_quick_switch_language">Quick Switch Languages</string>
	<string name="pref_quick_switch_language_summary">Pressing the Language key switches to the next language automatically, instead of showing a popup with all enabled languages.</string>
	<string name="pref_show_suggestions_abc">Show Letter Suggestions</string>
	<string name="pref_show_suggestions_abc_summary">Show possible letters in the suggestion bar when a key is pressed.</string>
	<string name="pref_show_emoji_suggestions">Emoji Suggestions</string>
	<string name="pref_show_emoji_suggestions_summary">Show relevant emojis in the suggestion bar after accepting a word.</string>
	<string name="pref_status_icon">Status Icon</string>
	<string name="pref_status_icon_summary">Show an icon when keyboard input is active.</string>
	<string name="pref_suggestion_font_size">Suggestion Font Size</string>
	<string name="pref_suggestion_smooth_scroll">Smooth Suggestion Scrolling</string>
	<string name="pref_upside_down_keys">Reverse Key Order</string>
	<string name="pref_upside_down_keys_summary">For computer numpads with 7–8–9 on the first row, instead of 1–2–3.</string>
	<string name="pref_color_scheme">Theme</string>
	<string name="pref_dark_theme_auto">Auto</string>
	<string name="pref_color_scheme_device_dark">System Dark</string>
	<string name="pref_color_scheme_device_light">System Light</string>
	<string name="dictionary_cancel_load">Cancel Loading</string>
	<string name="dictionary_load_bad_char">Loading failed. Invalid word on line %1$d of language \"%2$s\".</string>
	<string name="dictionary_load_error">Failed loading the dictionary for language \"%1$s\" (%2$s).</string>
</resources>