<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" app:orderingFromXml="true">
	<PreferenceCategory app:key="category_keyboard_color_scheme" app:title="@string/pref_category_colors">
		<com.tt9smart.preferences.screens.appearance.DropDownColorScheme />
	</PreferenceCategory>

	<PreferenceCategory app:title="@string/pref_category_layout">
		<com.tt9smart.preferences.screens.appearance.DropDownLayoutType app:title="@string/pref_layout" />
		<com.tt9smart.preferences.screens.appearance.SwitchDragResize />
		<com.tt9smart.preferences.screens.appearance.SwitchDoubleTapResize />
	</PreferenceCategory>

	<PreferenceCategory app:key="category_keyboard_geometry" app:title="@string/pref_category_geometry">
		<com.tt9smart.preferences.screens.appearance.DropDownAlignment app:title="@string/pref_numpad_alignment" />
		<com.tt9smart.preferences.screens.appearance.DropDownWidth app:title="@string/pref_numpad_width" />
		<com.tt9smart.preferences.screens.appearance.DropDownKeyHeight app:title="@string/pref_numpad_key_height" />
		<com.tt9smart.preferences.screens.appearance.DropDownBottomPaddingPortrait app:title="@string/pref_bottom_padding_portrait" />
		<com.tt9smart.preferences.screens.appearance.DropDownSuggestionFontSize app:title="@string/pref_suggestion_font_size" />
	</PreferenceCategory>

	<PreferenceCategory app:key="category_keyboard_keys" app:title="@string/pref_category_key_appearance">
		<com.tt9smart.preferences.screens.appearance.SwitchKeyShadows />
		<com.tt9smart.preferences.screens.appearance.SwitchLeftRightArrows />
		<com.tt9smart.preferences.screens.appearance.SwitchShowArrowsUpDown />

		<Preference
			app:fragment="com.tt9smart.preferences.FnKeyOrderScreen"
			app:key="screen_fn_key_order"
			app:title="@string/pref_category_fn_key_order" />
	</PreferenceCategory>

	<PreferenceCategory app:title="@string/pref_category_hacks">
		<com.tt9smart.preferences.screens.appearance.DropDownSettingsFontSize app:title="@string/pref_font_size" />

		<SwitchPreferenceCompat
			app:key="pref_status_icon"
			app:title="@string/pref_status_icon"
			app:summary="@string/pref_status_icon_summary" />

		<com.tt9smart.preferences.screens.appearance.SwitchWhenVisibleLayout
			app:key="pref_suggestion_smooth_scroll"
			app:title="@string/pref_suggestion_smooth_scroll"/>

		<com.tt9smart.preferences.screens.appearance.SwitchWhenVisibleLayout
			app:key="pref_alternative_suggestion_scrolling"
			app:title="@string/pref_alternative_suggestion_scrolling"
			app:summary="@string/pref_alternative_suggestion_scrolling_summary"/>

		<com.tt9smart.preferences.screens.appearance.SwitchWhenVisibleLayout
			app:key="pref_clear_insets"
			app:title="@string/pref_hack_always_on_top" />

	</PreferenceCategory>

</PreferenceScreen>
