<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:orderingFromXml="true">

	<Preference
		app:fragment="com.tt9smart.preferences.AppearanceScreen"
		app:key="screen_appearance"
		app:title="@string/pref_category_appearance" />

	<Preference
		app:fragment="com.tt9smart.preferences.LanguagesScreen"
		app:key="screen_languages"
		app:title="@string/pref_choose_languages" />

	<Preference
		app:fragment="com.tt9smart.preferences.KeyPadScreen"
		app:key="screen_keypad"
		app:title="@string/pref_category_keypad" />

	<Preference
		app:fragment="com.tt9smart.preferences.SetupScreen"
		app:key="screen_setup"
		app:title="@string/pref_category_setup" />

	<PreferenceCategory
		app:title="@string/pref_category_about"
		app:singleLineTitle="true">

		<com.tt9smart.preferences.screens.main.ProfitPreference
			app:key="screen_profit"
			app:isPreferenceVisible="false" />

		<Preference
			app:key="screen_privacy_policy"
			app:title="@string/pref_privacy_policy"
			app:summary="@string/english_only">
			<intent
				android:action="android.intent.action.VIEW"
				android:targetPackage="com.tt9smart"
				android:targetClass="com.tt9smart.preferences.PrivacyPolicyActivity" />
		</Preference>

		<Preference
			app:key="version_info"
			app:title="@string/app_name" />

	</PreferenceCategory>

</PreferenceScreen>
